On branch main  Your branch is up to date with 'origin/main'.
 Changes to be committed:
modified:   1. Build and deploy your first website/10. Aside - Anchor Tags/work.html

--- a/2. Build a Google.com clone/10. CSS classes/styles.css
+++ b/2. Build a Google.com clone/10. CSS classes/styles.css
@@ -1,13 +1,12 @@
-div {
+.main {
     margin-top: 100px;
 }
 
-img {
+.img{
     display: block;
     width: 300px;
 }
-
-input {
+.inp{
     display: block;
     width: 400px;
 }
