--- a/2. Build a Google.com clone/14. Centering our content/styles.css
+++ b/2. Build a Google.com clone/14. Centering our content/styles.css
@@ -1,8 +1,5 @@
 
-/*
-Challenge:
-Center the logo and the search field.
-*/
+
 .main {
     margin-top: 100px;    
 }
@@ -10,10 +7,15 @@ Center the logo and the search field.
 .logo-img {
     display: block;
     width: 300px;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .search-input {
     display: block;
     width: 400px;
+    margin-left: auto;
+    margin-right: auto;
+    
 }
