--- a/2. Build a Google.com clone/7. Inline vs block elements/styles.css
+++ b/2. Build a Google.com clone/7. Inline vs block elements/styles.css
@@ -4,9 +4,13 @@ Turn the elements into blocks!
 */
 
 img {
+    margin-top: 100px;
     width: 300px;
+    display: block;
+    
 }
 
 input {
     width: 400px;
+    display: block;
 }
