--- a/2. Build a Google.com clone/11. Aside - Learn margins via flags/styles.css
+++ b/2. Build a Google.com clone/11. Aside - Learn margins via flags/styles.css
@@ -1,11 +1,20 @@
+body{
+    margin: 20px;
+
+}
+
 .red {
     background: #c71226;
     height: 100px;
+   
 }
 
 .blue {
-    background: #0d1b88;
+    background:
+     #0d1b88;
     height: 100px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .green {
