--- a/2. Build a Google.com clone/12. Add space between our elements/styles.css
+++ b/2. Build a Google.com clone/12. Add space between our elements/styles.css
@@ -15,6 +15,8 @@ we can do this with margins?
 .logo-img {
     display: block;
     width: 300px;
+    margin-bottom: 40px;
+    
 }
 
 .search-input {
