--- a/2. Build a Google.com clone/17. Aside challenge - style Twitter button/styles.css
+++ b/2. Build a Google.com clone/17. Aside challenge - style Twitter button/styles.css
@@ -8,3 +8,25 @@ border color: #cfd9de
 text color: #0f1419
 Remember the font-weight!
 */
+button{
+    color: #0f1419;
+    width: 100px;
+    
+    margin-top: 50px;
+    margin-left: auto;
+    margin-right: auto;
+
+    border: 4px solid #cfd9de ;
+    border-radius: 20px;
+    font-weight: bold;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    
+
+
+
+    
+
+}
