--- a/2. Build a Google.com clone/18. Fix the input field/styles.css
+++ b/2. Build a Google.com clone/18. Fix the input field/styles.css
@@ -16,8 +16,17 @@
 .search-input {
     display: block;
     width: 400px;
+    line-height: 24px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
+    border: 1px solid #dfe1e5;
+    border-radius: 24px;
+
     margin-left: auto;
     margin-right: auto;
+    
     /*
     Challenge: 
     Design the search field according to the spec
