--- a/2. Build a Google.com clone/19. Center the button/styles.css
+++ b/2. Build a Google.com clone/19. Center the button/styles.css
@@ -1,5 +1,6 @@
 .main {
     margin-top: 100px;    
+    text-align: center;
 }
 
 .logo-img {
@@ -28,4 +29,20 @@
 Challenge:
 Center the button and add some space above it
 */
+.btn{
 
+   
+    margin-top: 15px;
+    background:#dfe1e5;
+    border:none;
+    border-radius: 4px;
+    padding-left: 20 px;
+    padding-right: 20 px;
+    padding-top: 10 px;
+    padding-bottom: 10 px;
+    border-radius: 4px;
+    font-size: 14px;
+
+
+
+}
