--- a/3. Build a digital Business Card/13. Add colors/styles.css
+++ b/3. Build a digital Business Card/13. Add colors/styles.css
@@ -14,6 +14,12 @@ body {
     display: flex;
     justify-content: space-around;
     text-align: center;
+    color:#2b2839 ;
+    background-color: #ddebf8;
+    border-bottom: #d8cefe 5px solid;
+    border-radius: 5px;
+
+    
     
     /* 
     Challenge:
@@ -24,7 +30,5 @@ body {
     */
 }
 
-.border-blue {
-    border: 1px dotted blue;
-}
+
     
