--- a/3. Build a digital Business Card/3. Add alt attribute/styles.css
+++ b/3. Build a digital Business Card/3. Add alt attribute/styles.css
@@ -1,3 +1,11 @@
 body {
     margin: 20px;
 }
+.img{
+    width: 150px;
+}
+.card{
+    border: 1px dotted blue;
+    padding: 20px;
+    display : flex
+}
