--- a/3. Build a digital Business Card/8. Add a utility class/styles.css
+++ b/3. Build a digital Business Card/8. Add a utility class/styles.css
@@ -7,11 +7,14 @@ body {
 }
 
 .card {
-    border: 1px dotted blue;
+ 
     padding: 20px;
     display: flex;
+    justify-content: space-around;
 }
-
+.border{
+    border: 1px dotted blue;
+}
 /*
 Challenge:
 Create a utility class for the dotted blue border.
